--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -7,9 +7,14 @@ sqlalchemy==2.0.23
 asyncpg==0.29.0
 psycopg2-binary==2.9.9
 
+# Authentication & Security
+python-jose[cryptography]==3.3.0
+bcrypt==4.0.1
+
 # Python utilities
 python-dotenv==1.0.0
 pydantic==2.5.0
+pydantic[email]==2.5.0
 pydantic-settings==2.1.0
 python-dateutil==2.8.2
 python-multipart==0.0.6
