--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -1,25 +1,31 @@
-FROM python:3.11-slim
+# ===== STAGE 1: BUILD =====
+FROM python:3.11-slim AS builder
 
-# Set working dir
 WORKDIR /app
 
-# Cài đặt các dependency hệ thống tối thiểu (ví dụ psycopg2 cần libpq)
 RUN apt-get update && apt-get install -y --no-install-recommends \
     gcc libpq-dev build-essential \
     && rm -rf /var/lib/apt/lists/*
 
-# Copy file requirements trước (tận dụng cache)
 COPY requirements.txt .
-
-# Cài Python dependencies
-RUN pip install --no-cache-dir --upgrade pip \
+RUN pip install --upgrade pip \
     && pip install --no-cache-dir -r requirements.txt
 
-# Copy toàn bộ source
 COPY . .
 
-# Expose port
+# ===== STAGE 2: RUNTIME =====
+FROM python:3.11-slim
+
+WORKDIR /app
+
+# Copy dependencies from build stage (giảm cực mạnh kích thước image)
+COPY --from=builder /usr/local /usr/local
+COPY --from=builder /app /app
+
+# Chỉ đây mới là lúc truyền SECRET / CORS / PORT (runtime, safe)
+ENV HOST=0.0.0.0
+ENV PORT=8000
+
 EXPOSE 8000
 
-# Chạy bằng Uvicorn
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--loop", "asyncio"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
