--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name chatbot.a2alab.vn;
+    server_name autosocial.tmedu.vn;
 
     root /usr/share/nginx/html;
     index index.html;
