--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -14,7 +14,14 @@ server {
     location /assets/ {
         root /usr/share/nginx/html;
     }
-
+    location /api/ {
+        proxy_pass http://social_automation_social_be:8000/api/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
     # ✅ Widget.js - Cho phép nhúng vào website khác (CORS)
     location /widget.js {
         root /usr/share/nginx/html;
