--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -15,7 +15,7 @@ server {
         root /usr/share/nginx/html;
     }
     location /api/ {
-        proxy_pass http://social_automation_social_be:8000/api/;
+        proxy_pass https://autosocial.tmedu.vn/api/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
