--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -20,6 +20,8 @@
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
+            proxy_set_header Content-Type $content_type;
+            proxy_set_header Content-Length $content_length;
             proxy_cache_bypass $http_upgrade;
         }
     }
