--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -15,7 +15,7 @@
             root /usr/share/nginx/html;
         }
         location /api/ {
-            proxy_pass https://autosocial.tmedu.vn/api/;
+            proxy_pass http://localhost:8000/api/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
