--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -15,7 +15,7 @@
             root /usr/share/nginx/html;
         }
         location /api/ {
-            proxy_pass https://social-automation-social-be.e7cqih.easypanel.host/;
+            proxy_pass https://social-automation-social-be.e7cqih.easypanel.host/api;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
